<?xml version="1.0"?>
<package format="2">
  <name>tf_mask_rcnn_detector</name>
  <version>0.0.1</version>
  <description>The tf_mask_rcnn_detector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xiangyu002@e.ntu.edu.sg">lxy</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>tensorflow_ros_cpp</depend>>
  <depend>opencv3_catkin</depend>>
  <depend>eigen_catkin</depend>>

</package>
